fix: The dog-img is not fitting its container correctly, which produces white and black stripes along the edges. The solution (for now) is to shrink the dog-img a tad. But this does not fix the root cause of the issue and is therefore not a good solution.

--- a/src/style/pages/_find-match.scss
+++ b/src/style/pages/_find-match.scss
@@ -21,6 +21,7 @@
       border-radius: 2rem;
       overflow: hidden;
       z-index: 6;
+      will-change: transform;
       &.behind {
         position: absolute;
         top: 0;
@@ -34,6 +35,7 @@
         width: 100vw;
       }
       .img-wrapper {
+        @include m.flex(center, center, column);
         position: relative;
         height: 100%;
       }
@@ -63,11 +65,17 @@
       }
       .dog-img {
         position: relative;
-        width: 100%;
-        height: 100%;
+        // The image is not fitting its container properly and shows white and black stripes around the edges when width and height are set to 100%.
+        width: 99.85%;
+        height: 99.85%;
         object-fit: cover;
         z-index: -1;
         user-select: none;
+        border-radius: 2rem;
+        @include m.media-query(mobile-find-match) {
+          width: 99.6%;
+          height: 99.6%;
+        }
       }
       .dog-name-and-group {
         position: absolute;
